--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <body>
         <h1>Library</h1>
         <br>
-        <p> A Sample webpage of a library is created. </p>
+        <p><h1> A Sample webpage of a library is created. </h1></p>
         <br>
 
         <div>
-            A Sample webpage is created. 
+        <h3>A Sample webpage is created.</h3>
         </div>
         <a href="https://www.google.com/"Google></a>
         <a href="https://www.facebook.com/">
